syntax = "proto3";

package order;

// OrderService manages customer orders and related operations
service OrderService {
    // Creates a new order
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc GetOrdersByUser(GetOrdersByUserRequest) returns (GetOrdersByUserResponse);
}

enum OrderStatus {
  PENDING = 0;
  CONFIRMED = 1;
  PROCESSING = 2;
  SHIPPED = 3;
  DELIVERED = 4;
  CANCELLED = 5;
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double unit_price = 4;
  double subtotal = 5;
}

message Order {
  string order_id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  OrderStatus status = 5;
  string shipping_address = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  string shipping_address = 3;
}

message CreateOrderResponse {
  bool success = 1;
  string message = 2;
  string order_id = 3;
  Order order = 4;
}

message UpdateOrderRequest {
  string order_id = 1;
  OrderStatus status = 2;
  string shipping_address = 3;
}

message UpdateOrderResponse {
  bool success = 1;
  string message = 2;
  Order order = 3;
}

message CancelOrderRequest {
  string order_id = 1;
  string user_id = 2;
}

message CancelOrderResponse {
  bool success = 1;
  string message = 2;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  bool success = 1;
  string message = 2;
  Order order = 3;
}

message ListOrdersRequest {
  int32 page = 1;
  int32 page_size = 2;
  OrderStatus status = 3;
}

message ListOrdersResponse {
  bool success = 1;
  string message = 2;
  repeated Order orders = 3;
  int32 total_count = 4;
}

message GetOrdersByUserRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message GetOrdersByUserResponse {
  bool success = 1;
  string message = 2;
  repeated Order orders = 3;
  int32 total_count = 4;
}